fixed footer css to not overlap with content in the body

--- a/src/main/webapp/resources/css/standard.css
+++ b/src/main/webapp/resources/css/standard.css
@@ -1,9 +1,14 @@
 html {
-    position: relative;
-    min-height: 100%;
+    height: 100%;
 }
 
-body { padding-top: 70px; }
+body {
+    padding-top: 70px;
+    padding-bottom: 8%;
+    position: relative;
+    margin: 0;
+    min-height: 100%;
+}
 
 footer{
     position: absolute;
